Bug 748865 - TB 12: Message Body not loaded when using "Fetch Headers Only" if message is in a sub-folder. r=Standard8